# orderbook

./: CMakeLists.txt  README.md  a.out  main.cpp
data/processed/: fills.csv  ob_depth.csv  pnl.csv
include/: csv_logger.hpp  order.hpp  order_book.hpp  order_id_gen.hpp  order_utils.hpp  pnl.hpp
include/strategy/: baseline_market_making.hpp  runner.hpp  strategy.hpp
src/: demo.cpp  main.cpp  market_maker.cpp  order_book.cpp
tests/: CMakeLists.txt  test_basic_add.cpp  test_cancel.cpp  test_cancel_edge_case.cpp  test_cross_fill.cpp  test_full_fill.cpp  test_logging.cpp  test_market.cpp  test_order_id_gen.cpp  test_partial_fill.cpp  test_pnl.cpp  test_snapshot.cpp  test_strategy_baseline.cpp  test_strategy_cancel_and_replace.cpp  test_stress.cpp  test_utils.hpp
